2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml: Bump MD version.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml: Register some basic file type icons.
	* MonoDevelop.Projects.Gui/IconCodon.cs: Renamed resource attribute to icon,
	  since that's how the icon service handles it.

2007-10-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui/IconService.cs: Use new icon names.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.mdp: Project file names updated by change in MD
	  path functions.

2007-10-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/MethodParameterDataProvider.cs: fixed
	  "Bug 325509 - Inaccessible methods displayed in autocomplete".

2007-10-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs: Fixed
	  "Bug 325528 - Intellisense contains multiple entries of same namespace".

2007-10-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs: Track
	  api changes.

2007-10-15  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CustomCommandWidget.cs
	(OnComboTypeChanged):
	(OnWorkingdirEntryChanged): Set focus on the correct widget.

2007-10-12  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CommonAssemblySigningPreferences.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CustomCommandPanelWidget.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CustomCommandWidget.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CompileFileProjectOptions.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/OutputOptionsPanel.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CustomCommandWidget.cs:
	  Applied changes that were neccassary for to the new FileService.
